# project-manager-tool

./: .gitignore  Cargo.toml  LICENSE  README.md  create_db.sql  server-config.toml  test.http
client/engineer/: Cargo.toml
client/manager/: Cargo.toml
server/: Cargo.toml  config.toml
server/src/: config.rs  error.rs  main.rs  request.rs  response.rs  security.rs  state.rs
server/src/dao/: mod.rs  organization.rs  role.rs  user.rs  user_role.rs
server/src/entity/: comment.rs  item.rs  mod.rs  organization.rs  role.rs  user.rs  user_role.rs
server/src/handler/: engineer.rs  manager.rs  mod.rs  organization.rs  project.rs  role.rs  story.rs  user.rs
server/src/request/: mod.rs  organization.rs  role.rs  user.rs
server/src/response/: mod.rs  organization.rs  role.rs  user.rs
server/src/service/: organization.rs  role.rs  user.rs
