[workspace]
members = ["client/engineer", "client/manager", "server"]
[workspace.dependencies]
tokio = "1.45.1"
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
chrono = "0.4.41"
axum = "0.8.4"
axum-macros = "0.5.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
sqlx = "0.8.6"
